Add DuckDB example for duplicate column name

--- a/experiments/statcan_products/check_duplicate_column_names.ipynb
+++ b/experiments/statcan_products/check_duplicate_column_names.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "id": "04e61bd3-ab4c-46aa-9c0b-de949699ca0a",
    "metadata": {},
    "outputs": [
@@ -72,126 +72,6 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1961</td>\n",
-       "      <td>1961-01-01</td>\n",
-       "      <td>1961-12-31</td>\n",
-       "      <td>Newfoundland and Labrador</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Present value calculation, timber stocks, meth...</td>\n",
-       "      <td>Dollars</td>\n",
-       "      <td>81</td>\n",
-       "      <td>millions</td>\n",
-       "      <td>6</td>\n",
-       "      <td>v3822242</td>\n",
-       "      <td>2.1</td>\n",
-       "      <td>470.0</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1961</td>\n",
-       "      <td>1961-01-01</td>\n",
-       "      <td>1961-12-31</td>\n",
-       "      <td>Newfoundland and Labrador</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Present value calculation, timber stocks, meth...</td>\n",
-       "      <td>Dollars</td>\n",
-       "      <td>81</td>\n",
-       "      <td>millions</td>\n",
-       "      <td>6</td>\n",
-       "      <td>v3822243</td>\n",
-       "      <td>2.2</td>\n",
-       "      <td>539.1</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1961</td>\n",
-       "      <td>1961-01-01</td>\n",
-       "      <td>1961-12-31</td>\n",
-       "      <td>Nova Scotia</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Present value calculation, timber stocks, meth...</td>\n",
-       "      <td>Dollars</td>\n",
-       "      <td>81</td>\n",
-       "      <td>millions</td>\n",
-       "      <td>6</td>\n",
-       "      <td>v3822244</td>\n",
-       "      <td>3.1</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1961</td>\n",
-       "      <td>1961-01-01</td>\n",
-       "      <td>1961-12-31</td>\n",
-       "      <td>Nova Scotia</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Present value calculation, timber stocks, meth...</td>\n",
-       "      <td>Dollars</td>\n",
-       "      <td>81</td>\n",
-       "      <td>millions</td>\n",
-       "      <td>6</td>\n",
-       "      <td>v3822245</td>\n",
-       "      <td>3.2</td>\n",
-       "      <td>76.6</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1961</td>\n",
-       "      <td>1961-01-01</td>\n",
-       "      <td>1961-12-31</td>\n",
-       "      <td>New Brunswick</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Present value calculation, timber stocks, meth...</td>\n",
-       "      <td>Dollars</td>\n",
-       "      <td>81</td>\n",
-       "      <td>millions</td>\n",
-       "      <td>6</td>\n",
-       "      <td>v3822246</td>\n",
-       "      <td>4.1</td>\n",
-       "      <td>637.9</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
        "    <tr>\n",
        "      <th>753</th>\n",
        "      <td>2010</td>\n",
@@ -294,30 +174,17 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>758 rows × 17 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    REF_DATE REF_START_DATE REF_END_DATE                        GEO DGUID  \\\n",
-       "0       1961     1961-01-01   1961-12-31  Newfoundland and Labrador  None   \n",
-       "1       1961     1961-01-01   1961-12-31  Newfoundland and Labrador  None   \n",
-       "2       1961     1961-01-01   1961-12-31                Nova Scotia  None   \n",
-       "3       1961     1961-01-01   1961-12-31                Nova Scotia  None   \n",
-       "4       1961     1961-01-01   1961-12-31              New Brunswick  None   \n",
-       "..       ...            ...          ...                        ...   ...   \n",
-       "753     2010     2010-01-01   2010-12-31                     Canada  None   \n",
-       "754     2011     2011-01-01   2011-12-31                     Canada  None   \n",
-       "755     2011     2011-01-01   2011-12-31                     Canada  None   \n",
-       "756     2012     2012-01-01   2012-12-31                     Canada  None   \n",
-       "757     2012     2012-01-01   2012-12-31                     Canada  None   \n",
+       "    REF_DATE REF_START_DATE REF_END_DATE     GEO DGUID  \\\n",
+       "753     2010     2010-01-01   2010-12-31  Canada  None   \n",
+       "754     2011     2011-01-01   2011-12-31  Canada  None   \n",
+       "755     2011     2011-01-01   2011-12-31  Canada  None   \n",
+       "756     2012     2012-01-01   2012-12-31  Canada  None   \n",
+       "757     2012     2012-01-01   2012-12-31  Canada  None   \n",
        "\n",
        "                                                 Value      UOM  UOM_ID  \\\n",
-       "0    Present value calculation, timber stocks, meth...  Dollars      81   \n",
-       "1    Present value calculation, timber stocks, meth...  Dollars      81   \n",
-       "2    Present value calculation, timber stocks, meth...  Dollars      81   \n",
-       "3    Present value calculation, timber stocks, meth...  Dollars      81   \n",
-       "4    Present value calculation, timber stocks, meth...  Dollars      81   \n",
-       "..                                                 ...      ...     ...   \n",
        "753  Present value calculation, timber stocks, meth...  Dollars      81   \n",
        "754  Present value calculation, timber stocks, meth...  Dollars      81   \n",
        "755  Present value calculation, timber stocks, meth...  Dollars      81   \n",
@@ -325,12 +192,6 @@
        "757  Present value calculation, timber stocks, meth...  Dollars      81   \n",
        "\n",
        "    SCALAR_FACTOR  SCALAR_ID    VECTOR COORDINATE   VALUE_1 STATUS SYMBOL  \\\n",
-       "0        millions          6  v3822242        2.1     470.0   None   None   \n",
-       "1        millions          6  v3822243        2.2     539.1   None   None   \n",
-       "2        millions          6  v3822244        3.1       0.0   None   None   \n",
-       "3        millions          6  v3822245        3.2      76.6   None   None   \n",
-       "4        millions          6  v3822246        4.1     637.9   None   None   \n",
-       "..            ...        ...       ...        ...       ...    ...    ...   \n",
        "753      millions          6  v3822241        1.2  124971.2   None   None   \n",
        "754      millions          6  v3822240        1.1  120498.5   None   None   \n",
        "755      millions          6  v3822241        1.2  120498.5   None   None   \n",
@@ -338,22 +199,14 @@
        "757      millions          6  v3822241        1.2  113132.6   None   None   \n",
        "\n",
        "    TERMINATED  DECIMALS  \n",
-       "0         None         1  \n",
-       "1         None         1  \n",
-       "2         None         1  \n",
-       "3         None         1  \n",
-       "4         None         1  \n",
-       "..         ...       ...  \n",
        "753       None         1  \n",
        "754       None         1  \n",
        "755       None         1  \n",
        "756       None         1  \n",
-       "757       None         1  \n",
-       "\n",
-       "[758 rows x 17 columns]"
+       "757       None         1  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +216,7 @@
     "\n",
     "issue = con.execute(\"SELECT * FROM '/data/tables/output/en/june_20_2025/38100105.parquet'\").df()\n",
     "\n",
-    "issue"
+    "issue.tail()"
    ]
   },
   {
@@ -378,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 40,
    "id": "d52074f9-7746-4569-9aea-57c204eda2eb",
    "metadata": {},
    "outputs": [
