--- a/experiments/statcan_products/date_parsing.ipynb
+++ b/experiments/statcan_products/date_parsing.ipynb
@@ -3,7 +3,13 @@
   {
    "cell_type": "markdown",
    "id": "e4d2c52d-38be-4f84-a0bf-6bd8cb577ad9",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "# Purpose\n",
     "I need to find out what all possible date formats are for the \"REF_DATE\" field so that when I write the parquet file people will be able to filter on it\n",
